--- a/package.json
+++ b/package.json
@@ -20,14 +20,20 @@
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.26",
     "http-server": "^14.1.1",
-    "sass-embedded": "^1.93.3",
+    "sass-embedded": "^1.95.1",
     "typescript": "^5.9.3",
     "vue": "^3.5.25",
     "vuepress": "2.0.0-rc.26",
-    "vuepress-theme-plume": "1.0.0-rc.178",
+    "vuepress-theme-plume": "1.0.0-rc.181",
     "wrangler": "^3.114.15"
   },
   "dependencies": {
-    "@iconify/json": "^2.2.410"
+    "@iconify/json": "^2.2.416",
+    "artplayer": "^5.3.0",
+    "chart.js": "^4.5.1",
+    "echarts": "^6.0.0",
+    "flowchart.ts": "^3.0.1",
+    "mermaid": "^11.12.2",
+    "pyodide": "^0.29.0"
   }
 }
